Chromium Mac: Fix implementation of wkScrollbarMinimumTotalLengthNeededForThumb to match WebKitSystemInterface https://bugs.webkit.org/show_bug.cgi?id=66311

Patch by Sailesh Agrawal <sail@chromium.org> on 2011-08-17
Reviewed by Dimitri Glazkov.

Updated wkScrollbarMinimumTotalLengthNeededForThumb() based on the latest disassembly of libWebKitSystemInterfaceLion.a.

* platform/chromium/ScrollbarOverlayUtilitiesChromiumMac.mm:
(wkScrollbarMinimumTotalLengthNeededForThumb):

git-svn-id: svn://svn.chromium.org/blink/trunk@93202 bbb929c8-8fbe-4397-9dbb-9b2b20218538