third_party/WebKit/Source/WebCore/platform/chromium/ScrollbarOverlayUtilitiesChromiumMac.mm
@@ -68,6 +68,10 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 @property(assign) id delegate;
 
 - (CGFloat)knobMinLength;
+- (CGFloat)trackOverlapEndInset;
+- (CGFloat)knobOverlapEndInset;
+- (CGFloat)trackEndInset;
+- (CGFloat)knobEndInset;
 - (CGFloat)trackBoxWidth;
 - (CGFloat)trackWidth;
 - (void)setBoundsSize:(NSSize)size;
@@ -206,8 +210,10 @@ int wkScrollbarThickness(int controlSize)
 
 int wkScrollbarMinimumTotalLengthNeededForThumb(WKScrollbarPainterRef painter)
 {
-    // TODO(sail): This doesn't match the implementation in WebKitSystemInterface.
-    return wkScrollbarMinimumThumbLength(painter);
+    return [painter knobMinLength] +
+           [painter trackOverlapEndInset] +
+           [painter knobOverlapEndInset] +
+           ([painter trackEndInset] + [painter knobEndInset]) * 2;
 }
 
 WKScrollbarPainterRef wkVerticalScrollbarPainterForController(WKScrollbarPainterControllerRef controller)
